--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.fujisakikyo.kotlinsample" >
 
     <application
-        android:name=".AppController"
+        android:name="com.example.fujisakikyo.kotlinsample.AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
